# rocketncode

./: CMakeLists.txt  README.txt  pressure.py
cLion/: CMakeLists.txt  CMakePresets.json  ambient.cpp  ambient.h  build-all.ps1  gas.cpp  gas.h  library.h  liquid.cpp  liquid.h  main.cpp  matter.cpp  matter.h  nozzle.cpp  nozzle.h  pipe.cpp  pipe.h  solid.cpp  solid.h  tank.cpp  tank.h  valve.cpp  valve.h
cLion/cmake/toolchains/: linux-x86_64-gcc.cmake
cLion/notes/: blowdown_equations.txt
